Updated styles and created new pages

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,1 +1,6 @@
+$body-bg: 	#2980b9;
+$navbar-default-bg: #2c3e50;
+$navbar-default-link-color: #ffffff;
+$navbar-default-link-hover-color: #f1c40f;
+
 @import 'bootstrap';
